# ds-ml-project_flight-prediction-challenge

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  0-1--config.ipynb  1-1--eda.ipynb  1-2--eda-add_grese.ipynb  1-3--eda-add_moritz.ipynb  2-2-model_random-forest.ipynb  EDA.ipynb  EDA_modeling_Moritz.ipynb  README.md  basic-q+a.md  basic-questions.md  eda+modeling.ipynb  flaws.md  makefile  ml-project-demo-presentation copy.key  pyproject.toml  readme.md  readme_.md  requirements.txt
.github/workflows/: markdownlint.yaml  validate_notebooks.yml
archive/: readme.md
assignment/: EDA-and-modeling.ipynb
docs/: presentation.html
docs/archive/: presentation-keynote-draft.key
docs/presentation/: index.html  plots
notebooks/: 0-1--config.ipynb  0-1--preliminaries.ipynb  0-1--retrieval.ipynb  0-2--retrieval.ipynb  1-1--eda-basic.ipynb  1-1--eda.ipynb  1-2--eda-add_grese.ipynb  1-3--eda-add_moritz.ipynb  2-1--model_catboost.ipynb  2-1--model_linear-regression.ipynb  2-2--model_catboost.ipynb  2-3--model_random-forest.ipynb  2-3--model_xgb.ipynb
notebooks/archive/: 0-2--retrieval_ssh.ipynb
src/ipynb_nbutils/: cfg.py  utils.py
src/local_nbutils/: __init__.py  utils.py
