[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "MoSeBaur" },
    { name = "greseberisha" },
    { name = "kvn-dtrx" },
]
name = "ds-ml-project_flight-delay-prediction"
version = "0.1.0"
description = "???"
readme = "readme.md"
license = { file = "license.txt" }
requires-python = ">=3.11"
dependencies = [
    # CatBoost Python Package
    "catboost==1.2.8",
    # IPython Kernel for Jupyter
    "ipykernel==6.29.5",
    # Jupyter interactive widgets
    "ipywidgets==8.0.6",
    # Jupyter metapackage. Install all the Jupyter components in one go.
    "jupyter==1.1.1",
    # Python plotting package
    "matplotlib==3.7.1",
    # Missing data visualization module for Python.
    "missingno==0.5.2",
    # Fundamental package for array computing in Python
    "numpy==1.26.0",
    # Powerful data structures for data analysis, time series, and statistics
    # "pandas==2.1",
    "pandas>=1.0,<2.0",
    # Python implementation of the Predictive Power Score (PPS)
    "ppscore==1.3.0",
    # Extension of Python package pycountry providing conversion functions.
    "pycountry-convert==0.7.2",
    # Read key-value pairs from a .env file and set them as environment variables
    "python-dotenv==1.1.0",
    # A set of python modules for machine learning and data mining
    "scikit-learn==1.2.2",
    # Statistical data visualization
    "seaborn==0.12.2",
    # Pretty-print tabular data
    "tabulate==0.9.0",
    # Filesystem events monitoring
    "watchdog==6.0.0",
    # XGBoost Python Package
    "xgboost==3.0.2",
]
